# care

./: .env.example  .gitignore  CLAUDE.md  Makefile  PREPARE.md  README.md  TODO.md  main.py  pyproject.toml
.github/workflows/: ci.yml  mirror.yml  publish.yml  release.yml
care/: __init__.py  app.py  builtin_tools.py  bulk_import.py  capability_priming.py  carl_summary.py  catalog.py  chain_export.py  cli.py  config.py  conflict.py  context_md.py  dataset.py  dotenv.py  evolution_session.py  first_run.py  generation.py  help.py  intermediate_artifacts.py  logging_setup.py  mage_summary.py  marketplace.py  memory.py  memory_ltm.py  micro_evolution.py  platform.py  preflight.py  profiling.py  replay.py  skill_enforcement.py  skill_file_inputs.py  skills.py  stage_regeneration.py  tool_planning.py  tool_synthesis.py  tools.py
care/assets/: __init__.py
care/runtime/: __init__.py  agent_diff.py  agent_hub.py  artifacts.py  bulk_ops.py  cancellation.py  carl_streamer.py  chain_edit_view.py  chain_title.py  clipboard.py  collections.py  command_palette.py  cost_rollups.py  dag_view.py  deck_builder.py  deploy_gate.py  doctor.py  document_extract.py  draft.py  edit_draft.py  empty_state.py  evolution_chain_templates.py  evolution_redis_probe.py  evolution_validation.py  executor.py  file_loading.py  fitness_export.py  fitness_plot.py  global_bindings.py  hint_fit.py  human_input.py  i18n.py  keystore.py  library_bundle.py  library_run.py  library_view.py  library_watcher.py  lineage.py  llm_client.py  local_run_history.py  (+29 more)
care/runtime/locales/: __init__.py  en.json  ru.json
care/sandbox/: __init__.py  audit.py  backend.py  docker.py  e2b.py  firejail.py  local.py  network_policy.py  output_mediation.py  resources.py  trust.py
care/screens/: __init__.py  _animated_modal.py  artifacts.py  catalog.py  chain_dag.py  chat.py  command_palette.py  confirm.py  conflict.py  cost.py  data_intro.py  demo.py  diff.py  directory_picker.py  edit_agent.py  evolution.py  evolution_compare.py  evolution_dashboard.py  evolution_intro.py  evolution_launch.py  execution.py  export.py  export_chain.py  file_picker.py  generation.py  help.py  help_modal.py  human_input.py  import_bundle.py  inspection.py  library.py  lineage.py  logs.py  marketplace.py  multi_compose.py  profile.py  query.py  replay.py  resume.py  run_context.py  (+10 more)
care/styles/: demo.tcss
care/widgets/: __init__.py  chat_input.py  context_menu.py  empty_state.py  footer.py  header.py  library_sidebar.py  pipeline_preview.py  status_bar.py  task_setup.py  toast.py
docs/: ARCHITECTURE.md  v0.0.0_TODO.md  v0.0.1_TODO.md  v0.0.2_TODO.md
docs/screens/: README.md
examples/asciicast/: recording_script.md
examples/asciicast/seed/: chain.json  mcp_servers.toml
examples/asciicast/seed/skills/pdf-helper/: SKILL.md
examples/asciicast/seed/tools/: demo_tool.py
examples/financier/: README.md  chain.json
examples/financier/skills/pdf-extractor/: SKILL.md
examples/summarizer/: README.md  chain.json  eval.jsonl
examples/weather/: README.md  chain.json  mcp_servers.toml
scripts/: _pilot_blocks_command.py  _pilot_branch_command.py  _pilot_chat_input_suggestions.py  _pilot_export_highlight.py  _pilot_history_sidebar.py  _pilot_imgpreview.py  _pilot_inspector_raw.py  _pilot_perf_smoke.py  _pilot_stream_cleanup.py  _pilot_theme_cycle.py  _pilot_theme_persist.py  _pilot_turn_focus.py  _pilot_voice_transcribe.py  generate_screens_index.py  record_demo.sh  sync_experiment_chain_templates.sh  sync_platform_llm_models.py  sync_runner_gigaevo_tools.sh
tests/: conftest.py  test_agent_diff.py  test_agent_hub.py  test_app_global_keys.py  test_app_shell.py  test_app_theme.py  test_architecture_doc.py  test_artifacts.py  test_asciicast_harness.py  test_builtin_tools.py  test_bulk_import.py  test_bulk_ops.py  test_cancellation.py  test_capability_memory_recall.py  test_capability_priming.py  test_care_fixes_batch.py  test_carl_streamer.py  test_carl_summary.py  test_catalog.py  test_chain_dag_modal.py  test_chain_edit_view.py  test_chain_export.py  test_chain_export_markdown.py  test_chain_title.py  test_chat_deploy.py  test_chat_deployments.py  test_chat_evolution_event_format.py  test_chat_metrics.py  test_chat_promote.py  test_chat_record_local_run.py  test_chat_revise.py  test_chat_rollback.py  test_chat_skill_files.py  test_chat_slash_command_manifest.py  test_chat_status_strip.py  test_chat_status_unified.py  test_chat_versions.py  test_ci_workflows.py  test_cli.py  test_cli_record_run.py  (+169 more)
